{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 21,
  "lineage": "75fd3c64-ca6e-d4e9-6491-b3d5d5b71dfc",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "az_a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:505353972116:subnet/subnet-f502ec93",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "172.31.16.0/20",
            "default_for_az": true,
            "id": "subnet-f502ec93",
            "map_public_ip_on_launch": true,
            "owner_id": "505353972116",
            "state": "available",
            "vpc_id": "vpc-33757054"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "az_b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:505353972116:subnet/subnet-80716fc9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "172.31.32.0/20",
            "default_for_az": true,
            "id": "subnet-80716fc9",
            "map_public_ip_on_launch": true,
            "owner_id": "505353972116",
            "state": "available",
            "vpc_id": "vpc-33757054"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "az_c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:505353972116:subnet/subnet-01923758",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "172.31.0.0/20",
            "default_for_az": true,
            "id": "subnet-01923758",
            "map_public_ip_on_launch": true,
            "owner_id": "505353972116",
            "state": "available",
            "vpc_id": "vpc-33757054"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:505353972116:vpc/vpc-33757054",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-6dbb140b",
            "default_route_table_id": "rtb-d7860fb1",
            "default_security_group_id": "sg-2aae2f56",
            "dhcp_options_id": "dopt-bf2b17d8",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-33757054",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-d7860fb1",
            "owner_id": "505353972116"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "control_plane",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07ce5f60a39f1790e",
            "arn": "arn:aws:ec2:ap-southeast-1:505353972116:instance/i-0998b6fadc9f054d9",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": true,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "udagram-cluster-host",
            "id": "i-0998b6fadc9f054d9",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "udagram-cluster-deployer-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-03dce6e11ca2a006b",
            "private_dns": "ip-172-31-26-205.ap-southeast-1.compute.internal",
            "private_ip": "172.31.26.205",
            "public_dns": "ec2-13-250-39-215.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.250.39.215",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-01e0b2776088844fc",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "udagram-cluster-common",
              "udagram-cluster-control_planes"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-f502ec93",
            "tags": {
              "Name": "udagram-cluster-control_plane-1",
              "kubernetes.io/cluster/udagram-cluster": "shared"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0515aedd12445f30d",
              "sg-075a1267da900288b"
            ]
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_iam_instance_profile.profile",
            "aws_iam_role.role",
            "aws_key_pair.deployer",
            "aws_security_group.common",
            "aws_security_group.control_plane"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07ce5f60a39f1790e",
            "arn": "arn:aws:ec2:ap-southeast-1:505353972116:instance/i-0d5f7a550c21585fb",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": true,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "udagram-cluster-host",
            "id": "i-0d5f7a550c21585fb",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "udagram-cluster-deployer-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-024b77eb81095a644",
            "private_dns": "ip-172-31-43-60.ap-southeast-1.compute.internal",
            "private_ip": "172.31.43.60",
            "public_dns": "ec2-13-228-168-173.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.228.168.173",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-02c013b08ddbcd1be",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "udagram-cluster-common",
              "udagram-cluster-control_planes"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-80716fc9",
            "tags": {
              "Name": "udagram-cluster-control_plane-2",
              "kubernetes.io/cluster/udagram-cluster": "shared"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0515aedd12445f30d",
              "sg-075a1267da900288b"
            ]
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_iam_instance_profile.profile",
            "aws_iam_role.role",
            "aws_key_pair.deployer",
            "aws_security_group.common",
            "aws_security_group.control_plane"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07ce5f60a39f1790e",
            "arn": "arn:aws:ec2:ap-southeast-1:505353972116:instance/i-0858585b2c9871168",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": true,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "udagram-cluster-host",
            "id": "i-0858585b2c9871168",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "udagram-cluster-deployer-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-0f8e3f2d016965024",
            "private_dns": "ip-172-31-4-135.ap-southeast-1.compute.internal",
            "private_ip": "172.31.4.135",
            "public_dns": "ec2-13-251-128-254.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.251.128.254",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-06d9a9c346c053c0f",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "udagram-cluster-common",
              "udagram-cluster-control_planes"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01923758",
            "tags": {
              "Name": "udagram-cluster-control_plane-3",
              "kubernetes.io/cluster/udagram-cluster": "shared"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0515aedd12445f30d",
              "sg-075a1267da900288b"
            ]
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_iam_instance_profile.profile",
            "aws_iam_role.role",
            "aws_key_pair.deployer",
            "aws_security_group.common",
            "aws_security_group.control_plane"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "control_plane",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:505353972116:loadbalancer/net/udagram-cluster-api-lb/706fea1f97c9ea22",
            "arn_suffix": "net/udagram-cluster-api-lb/706fea1f97c9ea22",
            "dns_name": "udagram-cluster-api-lb-706fea1f97c9ea22.elb.ap-southeast-1.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:505353972116:loadbalancer/net/udagram-cluster-api-lb/706fea1f97c9ea22",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "udagram-cluster-api-lb",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01923758"
              },
              {
                "subnet_id": "subnet-80716fc9"
              },
              {
                "subnet_id": "subnet-f502ec93"
              }
            ],
            "subnets": [
              "subnet-01923758",
              "subnet-80716fc9",
              "subnet-f502ec93"
            ],
            "tags": {
              "Cluster": "udagram-cluster",
              "kubernetes.io/cluster/udagram-cluster": "shared"
            },
            "vpc_id": "vpc-33757054",
            "zone_id": "ZKVM4W9LS7TM"
          },
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "control_plane_api",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:505353972116:listener/net/udagram-cluster-api-lb/706fea1f97c9ea22/d76392c8e2ea9ecc",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:505353972116:targetgroup/udagram-cluster-api/f310c0df48c672b8",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:505353972116:listener/net/udagram-cluster-api-lb/706fea1f97c9ea22/d76392c8e2ea9ecc",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:505353972116:loadbalancer/net/udagram-cluster-api-lb/706fea1f97c9ea22",
            "port": 6443,
            "protocol": "TCP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_lb.control_plane",
            "aws_lb_target_group.control_plane_api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "control_plane_api",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:505353972116:targetgroup/udagram-cluster-api/f310c0df48c672b8",
            "arn_suffix": "targetgroup/udagram-cluster-api/f310c0df48c672b8",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:505353972116:targetgroup/udagram-cluster-api/f310c0df48c672b8",
            "lambda_multi_value_headers_enabled": false,
            "name": "udagram-cluster-api",
            "port": 6443,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "target_type": "instance",
            "vpc_id": "vpc-33757054"
          },
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "control_plane_api",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:505353972116:targetgroup/udagram-cluster-api/f310c0df48c672b8-20200223104156298800000002",
            "port": 6443,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:505353972116:targetgroup/udagram-cluster-api/f310c0df48c672b8",
            "target_id": "i-0998b6fadc9f054d9"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_iam_instance_profile.profile",
            "aws_iam_role.role",
            "aws_instance.control_plane",
            "aws_key_pair.deployer",
            "aws_lb_target_group.control_plane_api",
            "aws_security_group.common",
            "aws_security_group.control_plane"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:505353972116:targetgroup/udagram-cluster-api/f310c0df48c672b8-20200223104156381700000003",
            "port": 6443,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:505353972116:targetgroup/udagram-cluster-api/f310c0df48c672b8",
            "target_id": "i-0d5f7a550c21585fb"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_iam_instance_profile.profile",
            "aws_iam_role.role",
            "aws_instance.control_plane",
            "aws_key_pair.deployer",
            "aws_lb_target_group.control_plane_api",
            "aws_security_group.common",
            "aws_security_group.control_plane"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:505353972116:targetgroup/udagram-cluster-api/f310c0df48c672b8-20200223104156275700000001",
            "port": 6443,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:505353972116:targetgroup/udagram-cluster-api/f310c0df48c672b8",
            "target_id": "i-0858585b2c9871168"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_iam_instance_profile.profile",
            "aws_iam_role.role",
            "aws_instance.control_plane",
            "aws_key_pair.deployer",
            "aws_lb_target_group.control_plane_api",
            "aws_security_group.common",
            "aws_security_group.control_plane"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "common",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:505353972116:security-group/sg-075a1267da900288b",
            "description": "cluster common rules",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-075a1267da900288b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "udagram-cluster-common",
            "name_prefix": null,
            "owner_id": "505353972116",
            "revoke_rules_on_delete": false,
            "tags": {
              "kubernetes.io/cluster/udagram-cluster": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-33757054"
          },
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "control_plane",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:505353972116:security-group/sg-0515aedd12445f30d",
            "description": "cluster control_planes",
            "egress": [],
            "id": "sg-0515aedd12445f30d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              }
            ],
            "name": "udagram-cluster-control_planes",
            "name_prefix": null,
            "owner_id": "505353972116",
            "revoke_rules_on_delete": false,
            "tags": {
              "kubernetes.io/cluster/udagram-cluster": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-33757054"
          },
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    }
  ]
}